# kewi

./: .gitignore  README.md  pyproject.toml
src/cli/: cli_main.py  register.sh  simple_cli.py
src/kewi/: __init__.py  args.py  cache.py  comfyui.py  context.py  eagle.py  obsidian.py  out.py  utils.py
src/kewi/core/: runner.py
src/kewi/data/: datasource.py  fileinfocache.py
src/kewi/data/sources/: moments_clips.py
src/kewi/discord/: bot_cog.py
src/kewi/globals/: globals.example.json  globals.py
src/kewi/openai/: conversator.py
src/kewi/web_backend/: web_server.py
src/scripts/: example.py
src/scripts/audio/: clean.py
src/scripts/cache/: clear.py
src/scripts/database/: info.md  spotify_show.py
src/scripts/dota/: recent.py
src/scripts/dota/match/: json.py
src/scripts/google/: photos.py
src/scripts/moments/: edit_json.py  view_json.py
src/scripts/private/: test2.py  update_high_notes.py
src/scripts/terminal/: colors.py
src/scripts/test/: args.py
