[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kewi"
version = "0.2.0"
description = "Kewi framework for scripts, bot, and frontend integration"
authors = [{name = "Malcolm Diller", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "orjson"
]

[tool.setuptools.packages.find]
where = ["src"]  # Looks in the 'src' folder for packages
